--- a/report/_paper-excel-gamm.Rmd
+++ b/report/_paper-excel-gamm.Rmd
@@ -1,15 +1,16 @@
 ---
 title: "基于广义可加混合模型空气质量为优天数影响因素研究"
 author: "Jin"
-date: "2019-04-15"
+date: '2019-04-15'
+output: pdf_document
 css: ./style/markdown.css
-autoEqnLabels: true
-eqnPrefixTemplate: ($$i$$)
-linkReferences: true
 bibliography: Bibfile.bib
+eqnPrefixTemplate: ($$i$$)
+link-citations: yes
+linkReferences: yes
 notice: '@*'
 csl: ./style/chinese-gb7714-2005-numeric.csl
-link-citations: true
+autoEqnLabels: yes
 ---
 
 
@@ -33,22 +34,214 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 简介
 
-在第 \@ref(sec:chap-5) 章中，我们分别对35城市年度和月度空气质量指数(AQI)进行了建
-模分析，得出了空气质量指数影响因素。空气质量指数是一个综合指标，反应的是城市空气
-质量的平均水平。为了更全面的研究城市空气质量状况，我们需要从其他角度开展研究。空
-气质量为优是空气质量治理控制的最后目标。这一章我们采用空气质量为优的天数为考察变
-量，建立模型探讨可以增加或减少城市空气质量为优天数的因素。下面分析同样分别从年度
-和月度两个方面进行分析。
+近几年来，空气质量问题引起了社会各界的广泛关注，城市空气污染已经成为了一个严重的社
+会问题。恶劣的空气环境不只严重影响了人们的健康和正常生活，也给社会各行各业带来了巨
+大的经济损失。日益下降的空气质量状况警醒我们比须及时采取相关措施提升城市空气质量。
+在2018年召开的全国生态环境保护大会上，习近平总书记就提出要加大力度推进生态文明建设、
+解决生态环境问题，坚决打好污染防治攻坚战，并要求坚决打赢蓝天保卫战是重中之重，要以
+空气质量明显改善为刚性要求，基本消除重污染天气，还老百姓蓝天白云。要做到这些，就需
+要我们找到空气质量的影响因素，进而根据影响因素及影响程度的大小进行相应的处理。因此，
+本文以空气质量为优天数为因变量，利用广义可加混合模型对城市空气质量的影响因素进行研究。
+
+广义可加混合模型是广义线性混合模型的推广，Lin和Zhang（1999）提出了广义可加混合模型，
+在GLMM中引入非参数均值函数来研究非参数回归，可以更好的解决因变量和自变量之间复杂的函
+数形式。但广义可加混合模型(GAMM)面临的主要问题是参数估计问题。由于GAMM模型中涉及多个
+参数，传统的似然估计函数很难实现，故基于MCMC抽样的贝叶斯统计推断方法被用来解决这一问
+题。Fahrmeir、Lang（2001）提出了通过基于Gibbs抽样的MCMC进行GAMM推断的一般贝叶斯方法[@Fahrmeir2001]。
+鉴于MCMC中比较常用的抽样方法MH抽样和Gibbs抽样的局限性，Neal（2003）提出切片抽样，并验
+证了其有效性[@Neal2003a]。Pham 和Wand(2018)在Zhao等(2006)的研究基础上，对广义可加混合
+模型实现了一种新的基于切片抽样的MCMC参数估计方法[@pham2018generalised;@Zhao2006]。
+对于模型的运用，国内大部分学者还是集中于广义线性混合模型及广义可加模型，关于广义
+可加混合模型的应用相对较少，但也有学者涉及。比如，张继磊（2009）通过构建伽玛可加
+混合模型、泊松可加混合模型，将非参数平滑方法运用到广义可加混合模型中，结合贝叶斯
+理论和MCMC方法得到参数的估计，研究了GAMM在非寿险公司未决赔款准备金评估中的运用，
+发现与传统的模型相比，GAMM得到的结果更为准确、更为客观[@张继磊2009]。针对本文所涉及的
+参数估计方法，曹红艳、刘桂芬、曾平等（2008）比较了PQL和基于MCMC的贝叶斯方法在广义线
+性混合模型中参数估计的精度和偏差[@曹红艳2008]。
+
+关于空气质量影响因素的研究方法，研究者大多采用环境库兹涅茨曲线（Zanin、Marra,2012,
+Zheng,2017,李健、靳泽凡、苑清敏，2019），面板回归分析（王斌会、王术，2015），空间
+分析（蔺雪芹、王岱，2016），灰色关联分析（湛社霞、匡耀求、阮柱，2018），主成分分析
+（李经路、曾天，2017）等[@zanin2012assessing;@zheng2017a;@李健2019;@王斌会2015;@蔺雪芹2016;@湛社霞2018;@李经路2017]。
+在进行空气质量分析时，主要采取以下两种变量来表征空气质量状况。第一类指标是以空气质量
+指数（AQI）等空气质量综合指数（蔺雪芹、王岱，2016）或PM2.5、PM10等主要污染物为因变量
+进行研究（李茜、宋金平、张建辉，2013）[@蔺雪芹2016;@李茜2013]。第二类是以某个时段内空
+气质量达标天数反映空气质量状况（吴雪萍、高明、曾岚婷，2017）[@吴雪萍2018]。同时，在考
+虑空气质量的影响因素时，主要考虑两方面的因素。第一类是社会经济因素（曲长雨，2018）
+[@曲长雨2018]，第二类是气象因素（李琛、刘瑾、王彦民，2017）[@李琛2017]。也有部分学者综
+合考虑了经济和气象因素（李静萍、周景博，2017）[@李静萍2017]。
+
+基于以上分析，可以发现：第一、对于使用的模型和空气质量的研究方法，还未有文章涉及广义可
+加混合模型在空气质量研究中的应用，而且国内大部分学者在进行GAMM估计时基本上都是利用基于
+M-H抽样和Gibbs抽样的MCMC方法，还未有人将基于切片抽样的MCMC估计方法应用于GAMM，本文应用
+H.Pham在2018年最新提出的R包gammSlice对广义可加混合模型进行更加精确的估计。第二、在考虑
+空气质量的影响因素时，鲜有文章引入地理因素。因此，本文选取2014-2017年中国重点监测的35个
+城市的年度数据和月度数据，综合考虑社会经济因素，气象因素和地理因素三方面的影响，分别以
+年度空气质量为优的天数和月度空气质量为优的天数为因变量建立广义可加混合模型进行相应研究，
+为空气质量状况研究提供新的研究方法，并完善空气质量状况的研究体系。
+
+## 贝叶斯广义可加混合模型
+
+广义加性混合模型（GAMM）为涉及横截面，纵向和空间数据现实复杂情况下的回归分析提供
+了广泛而灵活的框架。它们扩展了广义线性模型，通过将未知的度量自变量，时间尺度和空
+间自变量的光滑函数以及随机效应添加到预测子的一般线性固定效应部分。在下面讨论的贝
+叶斯广义可加混合模型中，所有这些影响因素以及光滑参数或其他超参数都被认为是随机的，
+并且通过为它们设置适当的先验分布来获得特定模型。
+
+假设$n$个个体的第$i$个观测值的因变量$y_{i}$条件独立，并且期望
+为$\mathbb{E}(y_{i}|\boldsymbol{b})=\mu_{i}^{\boldsymbol{b}}$，方差为
+$\text{var}(y_{i}|\boldsymbol{b})=\phi m_{i}^{-1}v(\mu_{i}^{\boldsymbol{b}})$，其中
+$v(\cdot)$是设定的方差函数，$m_{i}$是权重，$\phi$是尺度参数。那么广义
+可加混合模型为 
+$$g(\mu_{i}^{\boldsymbol{b}})=\boldsymbol{X_{i}\beta} + f_{1}(x_{1i}) + f_{2}(x_{2i})
+  + \cdots + \boldsymbol{Z_{i}b},$${#eq:121-1-1}
+
+其中$g(\cdot)$是联接函数，$\mu_{i}^{\boldsymbol{b}}$是 $y$
+的条件期望，$\boldsymbol{\beta}$ 是固定效应参数向量，$\boldsymbol{X_{i}}$是固定
+效应设计矩阵，$f_{j}$是自变量$x_{k}$的光滑函数，$\boldsymbol{Z_{i}}$是随机效应
+的设计矩阵，$\boldsymbol{b \sim \mathcal{N} (0, \Psi)}$ 是随机效应变量，其中方差
+协方差阵$\boldsymbol{\Psi}$ 一般未知而需要估计。
+
+在模型中，线性预测子和非参数函数共同来拟合自变量的固定效应，而随机效应用来拟合观
+测值之间的相关关系。当光滑函数$f(\cdot)$都为线性函数时，那么此时GAMM就变化为GLMM。
+
+在贝叶斯半参数模型推断中，未知函数 $f_{1}, \ldots, f_{p}$ ，更准确的说是相应的函数估计
+向量，以及参数 $\beta=\left(\beta_{1}, \ldots, \beta_{r}\right)$ 和随机
+效应 $b=(b(1), \ldots, b(G))$ 都被认为是随机变量。观测模型被视为以这些随机变量为条件，
+并且必须提前为模型设定合适的先验分布。
+
+未知函数 $f_{1}, \ldots, f_{p}$ 的先验设置取决于自变量的类型和对 $f_j$ 光滑度的
+经验判断。对于完全贝叶斯分析，在层次结构中进一步引入了方差的超先验。这允许同时估计
+未知函数和光滑度。常见的选择是高度分散的逆伽玛先验
+$$p\left(\tau^{2}\right) \sim \operatorname{IG}(a ; c)$$
+
+由于估计结果往往对超先验的选择很敏感，故应选择一个高度分散但合适的先验，如$a=1,c=0.005$。
+对于固定效应参数 $\beta_{1}, \ldots, \beta_{r}$ ，一般假定独立的离散先验
+ $p\left(\beta_{j}\right) \propto$ 一个常数， $j=1,\cdots,r$。固定效应参数先验还可
+以是高度离散的正态先验。随机效应的先验是 $b_{g}$ 满足独立同分布的正态假定。
+$$b_{g} | v^{2} \sim \mathcal{N}\left(0, v^{2}\right), \quad g=1, \ldots, G$$
+
+并且为 $v^{2}$ 再定义一个高度离散的超先验。接下来分别定义
+$$f=\left(f_{1}, \ldots, f_{p}\right), \qquad \tau^{2}=\left(\tau_{1}^{2}, \ldots, 
+\tau_{p}^{2}\right), \qquad \beta=\left(\beta_{1}, \ldots, \beta_{r}\right), \quad 
+b=\left(b_{1}, \ldots, b_{G}\right)$$ 
+
+表示函数估计、方差效应、固定效应和随机效应的参数向量。于是便可以通过以下的条件独立假设完
+成贝叶斯模型的设定：
+
+（a）对于给定的自变量和参数 $f$ 、 $\beta$ 、 $b$ ,观测对象 $y_i$ 是条件独立的；
+
+（b）先验 $p\left(f_{j} | \tau_{j}^{2}\right), j=1, \ldots, p$ 是条件独立的；
+
+（c）固定效应和随机效应的先验以及超先验 $\tau_{j}^{2}, j=1, \ldots, p$ 是彼此独立的。
+
+完全贝叶斯推断是基于以下的后验分布
+
+$$p\left(f, \tau^{2}, \beta, \, b \,| \,y\right) \propto p\left(\,y \,| \,f, \tau^{2}, 
+\beta, b\right) p\left(f, \tau^{2}, \beta, b\right)$$
+通过假设(a),可以得出观测数据$y$的条件分布，即每个观测对象似然值的乘积：
+
+$$p\left(y | f, \tau^{2}, \beta, b\right)=\prod_{i=1}^{n} L_{i}\left(y_{i} ; \eta_{i}\right)$$ {#eq:m-bayes-13}
+其中 $L_{i}\left(y_{i} ; \eta_{i}\right)$ 由数据所属的指数族分布和预测子 $\eta$ 的形式选择
+决定。
+
+通过假设(b)和(c)，可以得到如下的后验推断：
+
+$$
+p\left(f, \tau^{2}, \beta, b | y\right) \propto \prod_{i=1}^{n} L_{i}\left(y_{i} ; \eta_{i}\right) \prod_{j=1}^{p}\left\{p\left(f_{j} | \tau_{j}^{2}\right) p\left(\tau_{j}^{2}\right)\right\} \prod_{k=1}^{r} p\left(\beta_{k}\right) \prod_{g=1}^{G} p\left(b_{g} | v^{2}\right) p\left(v^{2}\right)
+$$
+
+通过MCMC模拟，在给定其余参数和数据的情况下，通过更新单个参数或参数块的充分条件
+可以完成贝叶斯推断。
+
+## Lasso变量筛选方法
+
+在统计建模和机器学习中，Lasso是一种回归分析方法，它用于变量选择和正则化，以提高
+其产生的统计模型的预测准确性和可解释性。它最初是为最小二乘模型制定的，但Lasso正
+则化很容易以一种简单的方式扩展到广泛的统计模型，包括广义线性模型、可加模型和混合
+模型等。其进行变量筛选的方法是强制回归系数绝对值之和小于一个固定值，从而强制将某些系数设置为
+零，进而有效地选择一个不包含这些系数的更简单的模型，通过改变模型拟合过程，只选择提供的自
+变量的子集用于最终模型，而不是使用所有自变量。
 
 # 变量选择与数据来源
 
+《环境空气质量指数（AQI）技术规定（试行）》对空气质量指数及其等级划分进行了说明。空气质量
+指数（air quality index，AQI）是定量描述空气质量状况的无量纲指数，并将其划分为6级，分别对应
+优、良、轻度污染、中度污染、重度污染、严重污染。其中一级空气质量指数级别即空气质量为优是指
+AQI在0~50的情况，故本文分别以年度和月度空气质量为优天数作为因变量进行空气质量影响因素分析。
+年度数据分析可以了解基本情况，月度数据分析可使结果更加准确。
+
+空气质量的好坏反映了空气污染的程度，空气污染是一个复杂的现象，在特定时间和地点，空气质量受
+很多因素的影响，比如常见的空气质量影响因素包括经济社会因素、地理因素及气象因素。
+
+经济社会因素中，经济增长、人口因素、绿化建设、交通运输、能源消耗、废气排放等都会对
+空气质量产生影响。有研究表明，人口集聚会对空气质量产生一定的影响，人口密度可以反映
+人口地理分布的疏密程度，但是考虑到市辖区人口较多，郊区人口较少，从某种意义上讲，人
+口密度会将市辖区和郊区对空气质量的影响视为等同，因此，选取年末常住人口表示人口因素。
+空气质量的两大污染源包括固定污染源和移动污染源，固定污染源是指向环境排放或释放有害
+物质或对环境产生有害影响的场所、设备和装置，用房屋建筑施工面积代表。移动污染源主要
+指空气排放污染物的交通工具，用私人汽车拥有量和城市公路客运量进行表示。能源消耗产生
+的废气严重污染了空气,用全社会用电量代表能源消耗。
+
+经济社会因素可以视为影响空气质量好坏的人为因素，这些因素可以根据实际情况做出相应改变。
+而气象因素及地理因素则是影响空气质量好坏的固定因素。气温、降水量、气压、风速、相对湿度、
+日照时数都会对空气质量产生一定的影响。同时，城市的地形、南北方差异，北方供暖会产生大量
+废气排放，沿海城市因为有海风有利于污染物扩散都会对空气质量产生相应的影响。
+
+根据以上分析，鉴于数据的可获得性，选取比较有代表性的指标，最终确定初步选取空气质量影响因
+素24个，具体列举在表 \@ref(tab:tab3) 中。
+
+```{r tab3, eval=T,results='markup', cache=F}
+library("kableExtra")
+tab3 <- read.csv('./results/variable.csv')
+knitr::kable(tab3, row.names =F, align = "l", caption="空气质量影响因素指标体系",
+             longtable = TRUE, booktabs = TRUE, escape = F,
+             linesep  = c(rep("", 12), "\\hline", rep("",5), "\\hline")) %>%
+			     kable_styling(latex_options = c("scale_down", "repeat_header", "hold_position"),
+                 repeat_header_text = "(续)")%>%
+    kable_styling(full_width = T) %>%
+    column_spec(1:4, width = c("3cm", "3cm", "5cm", "2cm"))
+			 
+```
+
+以上指标数据来源于《中国气象年鉴》、《中国统计年鉴》和《城市空气质量状况月报》。虽然空气质量指
+数是实时数据，可以得到该指标的日数据。但影响空气质量的大部分因素无法获取日数据，而只能获取年度
+数据和月度数据，并且需要作相关的数据处理。由于月度固定资产投资为累计值，故采用后一期减去前一期的
+计算方法。其他的非月度数据，采用合适的频率转化方法转化为月度数据以后再进行分析。如经济指标中的
+月度地区生产总值使用相应的季度生产总值除以3近似代替。对于常住人口、建成区绿化覆盖率、私人汽车拥
+有量这些存量数据，将年末值作为各月值进行分析。
+
+在进行实证建模分析之前，需要对因变量的分布进行考察。首先分别对年度和月度空气质量为优天数两个变量
+进行Shapiro-Wilk和Jarque-Bera正态性检验，结果均表现出很强的非正态性。图 \@ref(fig:fig-dep-norm) 
+给出了年度空气质量为优天数对数化后的密度曲线。显然，可将对数化后的年度空气质量为优天数当作正态分
+布处理，而月度空气质量为优天数根据其数据特征，本文将其定义为泊松分布。
+
+```{r fig-dep-norm, eval=T, fig.height=2.5,fig.width=6.5,out.width="1.0\\textwidth", fig.pos="h", fig.cap = " 年度平均AQI，月度平均AQI对数密度图", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
+rm(list=ls())
+dat.y <- read.csv("./data/yearly.csv")
+dat.m <- read.csv("./data/monthly.csv")
+
+par(mar = c(1.1, 4.5, 2.1, 1.1))
+
+plot(density(scale(log(dat.y$excellent+3))), main="年度空气质量为优天数对数密度",
+     xlim = c(-4,4), ylim = c(0,0.55), ylab = "", col="red",
+     cex.main = 0.8, cex.lab=0.7)
+lines(seq(-4, 4, 0.01), dnorm(seq(-4, 4, 0.01)), lty=2, col="blue")
+legend("topright", legend = c("经验密度", "标准正态密度"),lty=c(1,2), col = c("red", "blue"),
+       bty = 'n', cex = 0.7, pt.cex = 1
+       )
+
+```
+
+
 # 年度空气质量为优天数影响因素分析
 
-我们收集了2014年-2017年35城市每一天的AQI值，根据每一天的AQI值和空气质量指数等级
-划分标准，就可以计算得到2014-2017年35城市的年度空气质量为优天数。根据第
-\@ref(sec:dep-dist) 节的分析结果，年度空气质量为优天数取对数后近似服从正态分布。
+本文收集了2014年-2017年35城市每一天的AQI值，根据每一天的AQI值和空气质量指数等级
+划分标准，就可以计算得到2014-2017年35城市的年度空气质量为优天数。根据前文的分析结果，
+年度空气质量为优天数取对数后近似服从正态分布。
 下面就以这个变量作为因变量开展分析，首先进行自变量筛选，然后建立正态可加混合模型
-框架下的各种具体模型。
+框架下的各种具体模型。并在这些可选模型中通过综合比较模型拟合优度，模型实际意
+义等确定最优模型。
 
 ## 年度空气质量为优天数Lasso自变量筛选
 
@@ -93,18 +286,27 @@ mapply(function(i, y) {
 
 ```
 
+以上进行筛选的变量均为连续性变量，对于地理因素中的是否集中供暖和是否临海这两个因素，
+本文采用t检验探究城市空气质量指数与地理环境之间的关系。对2017年35个城市的相关数据进行
+t检验，结果显示在本文所研究的35所城市中，集中供暖的有17个，剩下的18所城市不采取集中供暖。
+在集中供暖的城市中，2017年空气质量为优的平均天数为34.82天。而在没有集中供暖的18所城市中，空气质量为优的平均天数为102.72天。且在5%的显著性检验下，检验结果通过显著性检验，说明集中供暖的城市与没有集中
+供暖的城市其空气质量指数存在显著差异。同样，在5%的显著性水平下，临海和不临海的城市的空
+气质量指数之间也存在显著差异。在本文研究范围内，临海城市有10个，内陆城市有25个，临海城
+市空气质量为优的平均天数为98.90天。内陆城市空气质量为优的平均天数为58.08天。以上分析表明，城市空气质量与地理因素有关，是
+否集中供暖和是否临海其城市的空气质量差异较大。因此，这两个变量也作为影响因素参与模型构建。
+
 ## 年度空气质量为优天数线性回归模型
 
 先建立最简单的多元线性回归模型，作为后面复杂模型的比较基准。模型估计结果如表
-\@ref(tab:tab-excel-lm-y) 所示。由表 \@ref(tab:tab-excel-lm-y) 可知，在筛选出的
+\@ref(tab:tab-excel-y-huizong) 所示。由表 \@ref(tab:tab-excel-y-huizong) 可知，在筛选出的
 变量中，废气治理完成投资额、平均风速、临海、纬度这四个变量在10%的显著性水平下通
 过显著性检验，且其系数分别为-0.1342、0.6314、-0.988、0.4863，说明平均风速、纬度
 对年均空气质量为优天数呈正向影响，而废气治理完成投资、临海对年均空气质量为优天数
 呈负向影响。也就是说，在其他变量保持不变的条件下，废气治理完成投资额越多，年均空
 气质量为优的天数越少，空气质量越差；平均风速越大，年均空气质量为优天数越多，空气
 质量越好；纬度越高，年均空气质量为优天数越多，空气质量越好；平均来讲，临海地区比
-不临海地区年均空气质量为优天数少0.988天。但根据我们的认知，废气治理完成投资额越
-多，空气质量应该越好。在这里，我们同样可以做出如下解释，目前废气治理完成投资额不
+不临海地区年均空气质量为优天数少0.988天。但根据通常的认知，废气治理完成投资额越
+多，空气质量应该越好。在这里，本文可以做出如下解释，目前废气治理完成投资额不
 足，当空气污染严重时，才增加更多投资来缓解空气污染。因此，在线性回归模型中，在一
 定时间内，废气污染治理完成投资额越多，空气污染越严重。
 
@@ -117,9 +319,10 @@ varselname <- as.character(varselname[order(varselname$var_no), 2])
 lm.y.excel <- lm(dat.sel.y.excel[, c("excellent", varsel)])
 lm.y.excel.coef <- summary(lm.y.excel)$coef
 
-
+AIC(lm.y.excel);BIC(lm.y.excel);
+#347.0319;379.3899
 dimnames(lm.y.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(lm.y.excel.coef,"C:/Users/Administrator/Desktop/lm.y.excel.coef.csv")
 library("kableExtra")
 knitr::kable(lm.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="年度空气质量为优天数线性回归模型回归系数表",digits = 4,
@@ -172,7 +375,7 @@ knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"),
 ## 年度空气质量为优天数线性混合效应模型
 
 之后将城市作为随机效应建立线性混合模型，对空气质量为优的天数的影响因素进行分析。拟合结果如
-表 \@ref(tab:tab-excel-lme-y) 所示。由表 \@ref(tab:tab-excel-lme-y) 可以看出，在10%的显著性
+表 \@ref(tab:tab-excel-y-huizong) 所示。由表 \@ref(tab:tab-excel-y-huizong) 可以看出，在10%的显著性
 水平下，废气治理完成投资额、平均风速通过显著性检验，且其系数分别为-0.0868、0.4009。表明在
 其他变量保持不变的条件下，废气治理完成投资额越多，年均空气质量为优天数越少，空气质量越差；
 平均风速越大，年均空气质量为优天数越多，空气质量越好。同样，在线性混合模型中，废气治理完成
@@ -186,11 +389,12 @@ lme.y.excel <- gamm(excellent~gdp+power+gas_control
                    +rain+humid+wind_speed
                    +heating+coast+lat,
               random=list(city=~1), data=dat.sel.y.excel, method = "REML")
-
+AIC(lme.y.excel$lme);BIC(lme.y.excel$lme)
+#407.4109；441.8213
 lme.y.excel.coef <- summary(lme.y.excel$lme)$tTable[,-3]
 
 dimnames(lme.y.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(lme.y.excel.coef,"C:/Users/Administrator/Desktop/lme.y.excel.coef5.csv")
 library("kableExtra")
 knitr::kable(lme.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="年度空气质量为优天数线性混合效应模型回归固定效应表",digits = 4,
@@ -207,7 +411,7 @@ knitr::kable(lme.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 由之前变量筛选的结果可知，地区生产总值、纬度与年均空气质量为优天数之间存在非线性
 相关关系。进一步建立半参数回归模型，建立的半参数模型参数部分结果显示在表
-\@ref(tab:tab-excel-gam-y) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gam-y)
+\@ref(tab:tab-excel-y-huizong) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gam-y)
 中，非参数项显著性检验结果在表\@ref(tab:tab-excel-gam-y-smooth) 中。
 
 
@@ -220,7 +424,9 @@ gam.y.excel <- gam(excellent~s(gdp)+power+gas_control
 gam.y.excel.coef <- summary(gam.y.excel)$p.table
 
 dimnames(gam.y.excel.coef) <- list(c("截距项", varselname[-c(1,9)]), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(gam.y.excel.coef,"C:/Users/Administrator/Desktop/gam.y.excel.coef5.csv")
+gam.y.excel$aic#306.42
+BIC(gam.y.excel)#364.4073
 library("kableExtra")
 knitr::kable(gam.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="年度空气质量为优天数半参数回归模型参数估计结果",digits = 4,
@@ -233,7 +439,7 @@ knitr::kable(gam.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-由表 \@ref(tab:tab-excel-gam-y) 可知，在10%的显著性水平下，全社会用电量、废气治
+由表 \@ref(tab:tab-excel-y-huizong) 可知，在10%的显著性水平下，全社会用电量、废气治
 理完成投资额、平均相对湿度、平均风速对年均空气质量为优天数存在显著影响，其系数分
 别为0.0013、-0.1091、0.0364、0.5378。表明在其他变量保持不变的条件下，全社会用电
 量越多，年均空气质量为优的天数越多，空气质量越好；废气污染治理完成投资额越多，年
@@ -292,7 +498,7 @@ knitr::kable(gam.smooth.tab.y.excel, row.names =T, align = c("c", "c", "c", "c")
 ## 年度空气质量为优天数半参数混合效应模型
 
 以城市作为随机效应，进一步建立半参数混合效应模型，模型参数部分结果显示在表
-\@ref(tab:tab-excel-gamm-y) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gamm-y)
+\@ref(tab:tab-excel-y-huizong) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gamm-y)
 中，非参数项显著性检验结果在表\@ref(tab:tab-excel-gamm-y-smooth) 中。
 
 
@@ -302,11 +508,12 @@ gamm.y.excel <- gamm(excellent~s(gdp)+power+gas_control
                    +rain+humid+wind_speed
                    +heating+coast+s(lat),
                random=list(city=~1), data=dat.sel.y.excel, method = "REML")
-
+AIC(gamm.y.excel$lme)#376.1004
+BIC(gamm.y.excel$lme)#416.2459
 gamm.y.excel.coef <- summary(gamm.y.excel$lme)$tTable[-(9:10),-3]
 
 dimnames(gamm.y.excel.coef) <- list(c("截距项", varselname[-c(1,9)]), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(gamm.y.excel.coef,"C:/Users/Administrator/Desktop/gamm.y.excel.coef5.csv")
 library("kableExtra")
 knitr::kable(gamm.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="年度空气质量为优天数半参数混合效应模型固定效应表",digits = 4,
@@ -319,12 +526,8 @@ knitr::kable(gamm.y.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-由表 \@ref(tab:tab-excel-gamm-y) 可知，在10%的显著性水平下，全社会用电量、废气治
-理完成投资额、平均相对湿度、平均风速通过显著性检验，且其系数分别为0.0010、-0.0961、
-0.0358、0.4643。表明在其他条件不变的前提下，全社会用电量越多，年均空气质量为优的
-天数越多，空气质量越好；废气治理完成投资额越多，年均空气质量为优天数越少，空气质
-量越差；平均相对湿度越大，年均空气质量为优天数越多，空气质量越好；平均风速越大，
-年均空气质量为优天数越多，空气质量越好。
+由表 \@ref(tab:tab-excel-y-huizong) 可知，在10%的显著性水平下，半参数混合效应的参数部分
+各显著变量及其对年度空气质量为优天数的作用方向与半参数回归模型保持一致。
 
 ```{r fig-excel-gamm-y, eval=T, fig.height=3.5, fig.width=6.5,out.width="0.9\\textwidth", fig.pos="H", fig.cap = "年度空气质量为 优天数半参数混合模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
 par(mfrow = c(1,2))
@@ -373,15 +576,32 @@ knitr::kable(gamm.smooth.tab.y.excel, row.names =T, align = c("c", "c", "c", "c"
 
 ## 年度空气质量为优天数模型比较与最优模型选择
 
-上述分析中，我们选取年均空气质量为优天数作为因变量，基于Lasso筛选出的变量为自变量，
+```{r tab-excel-y-huizong, eval=T, results='markup'}
+yearly=read.csv("./results/yearly-excel.csv")
+
+library("kableExtra")
+knitr::kable(yearly, row.names =T, align = c("r", "r", "r", "r"),
+             caption="年度平均空气质量为优天数模型汇总表",digits = 4,
+             longtable = TRUE, booktabs = TRUE, escape = F) %>%
+    kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
+                  ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
+                  repeat_header_text = "(续)")%>%
+    kable_styling(full_width = T) %>%
+    column_spec(1, width = c("2cm"))
+
+```
+
+上述分析中，选取对数化的年均空气质量为优天数作为因变量，基于Lasso筛选出的变量为自变量，
 分别建立线性回归模型、线性混合效应模型、半参数回归模型和半参数混合效应模型对空气
 质量的影响因素进行分析。根据以上分析结果可知，在线性回归模型中，显著的变量有废气
 治理完成投资额、平均风速、是否临海、纬度；在线性混合效应模型中，显著的变量有废气
-治理完成投资额、平均风速；在半参数回归模型中，显著的变量有全社会用电量、废气治理
-完成投资额、平均相对湿度、平均风速、地区生产总值、纬度；在半参数混合效应模型中，
-显著的变量有全社会用电量、废气治理完成投资额、平均相对湿度、平均风速、地区生产总值、
-纬度。根据以上结果，经过比较之后可以发现半参数混合效应模型最好，但是从模型变量来讲，
-结合之前的分析及我们的预期，这些模型尚未很好地表明变量与年均空气质量为优天数之间的关系。
+治理完成投资额、平均风速；在半参数回归模型和半参数混合效应模型中，显著的变量均为
+全社会用电量、废气治理完成投资额、平均相对湿度、平均风速、地区生产总值、纬度。同时，
+模型结果显示除线性回归中临海地区的空气质量为优天数明显大于内陆地区以外，其余各个模型均表明
+是否供暖和是否临海两个地理因素对空气质量为优天数的影响并不显著。根据
+各个模型的AIC、BIC值可以发现半参数回归模型最好，其AIC和BIC值最小，分别为306.4200 
+和364.4073，但是从模型变量来讲，结合之前的变量筛选结果，这些模型尚未很好地表明变量与年
+均空气质量为优天数之间的关系。
 
 进一步选取上述所有模型中显著的变量，考虑实际情况，以年均空气质量为优天数为因变量，
 全社会用电量、废气治理完成投资额、平均相对湿度、平均风速为自变量建立半参数回归模
@@ -389,8 +609,7 @@ knitr::kable(gamm.smooth.tab.y.excel, row.names =T, align = c("c", "c", "c", "c"
 线显示在图 \@ref(fig:fig-excel-gam-y-best) 中，非参数项显著性检验结果在表
 \@ref(tab:tab-excel-gam-y-smooth-best) 中。
 
-由表 \@ref(tab:tab-excel-gam-y-best) 可知，在10%的显著性水平下，全社会用电量、废
-气治理完成投资额、平均相对湿度、平均风速、地区生产总值、纬度均通过显著性检验，且
+由表 \@ref(tab:tab-excel-gam-y-best) 可知，在10%的显著性水平下，全社会用电量等6个变量均通过显著性检验，且参数部分的
 参数项系数分别为0.0016、-0.1081、0.0497、0.6479。表明在其他条件不变的情况下，全
 社会用电量越多，年均空气质量为优的天数越多，空气质量越好；废气治理完成投资额越多，
 年均空气质量为优天数越少，空气质量越差；平均相对湿度越大，空气质量为优的天数越多，
@@ -508,9 +727,9 @@ knitr::kable(moran.g.gam.best, row.names =T, align = c("r", "r", "r", "r"),
 # 月度空气质量为优天数影响因素分析
 
 利用2014年-2017年35城市每一天的AQI值，根据每一天的AQI值和空气质量指数等级划分标
-准，可以得到2014年-2017年35城市的月度空气质量为优天数。根据第\@ref(sec:dep-dist)
-节中对因变量分布的分析，月度空气质量为优天数近似服从泊松分布。下面就以这个服从泊
-松分布的变量作为因变量开展分析，首先利用Lasso方法进行自变量筛选，然后建立泊松可
+准，可以得到2014年-2017年35城市的月度空气质量为优天数。根据前文对因变量分布的分析，
+月度空气质量为优天数近似服从泊松分布。故接下来以服从泊松分布的月度空气质量为优天数
+作为因变量开展分析，首先利用Lasso方法进行自变量筛选，然后建立泊松可
 加混合模型框架下的各种具体模型并进行模型比较和最优模型选择。
 
 ## 月度空气质量为优天数Lasso自变量筛选
@@ -559,7 +778,7 @@ mapply(function(i, y) {
 ## 月度空气质量为优天数泊松回归模型
 
 由于月度空气为优天数服从泊松分布，所以首先可以建立泊松回归模型作为比较的基准。泊
-松回归模型估计结果如表 \@ref(tab:tab-excel-lm-m) 所示。
+松回归模型估计结果如表 \@ref(tab:tab-excel-m-huizong) 所示。
 
 ```{r tab-excel-lm-m, eval=T, results='markup'}
 varsel <- c(as.character(varinfo[,3][-c(1:4, 24:25)][getActive(gam1, 25, "nonzero")[[1]]]),
@@ -573,10 +792,10 @@ glm.m.excel <- glm(excellent~con_area+gas_control
                    data=dat.sel.m.excel,
                    family = "poisson")
 lm.m.excel.coef <- summary(glm.m.excel)$coef
-
+AIC(glm.m.excel);BIC(glm.m.excel)
 
 dimnames(lm.m.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(lm.m.excel.coef,"C:/Users/Administrator/Desktop/lm.m.excel.coef.csv")
 library("kableExtra")
 knitr::kable(lm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="月度空气质量为优天数泊松回归模型回归系数表",digits = 4,
@@ -589,7 +808,7 @@ knitr::kable(lm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-由表 \@ref(tab:tab-excel-lm-m) 可知，在筛选出的变量中，房屋建筑施工面积、废气治
+由表 \@ref(tab:tab-excel-m-huizong) 可知，在筛选出的变量中，房屋建筑施工面积、废气治
 理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖、是否临海、纬度
 这些变量在10%的显著性水平下均通过显著性检验，且其系数分别为0.0000、-0.5486、
 0.031、0.0008、0.0309、0.3306、0.1992、0.0826、-0.017，说明平均气温、降水量、平
@@ -635,7 +854,7 @@ knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"),
 ## 月度空气质量为优天数泊松混合效应模型
 
 把城市作为随机效应建立泊松混合模型，对空气质量影响因素进行分析。模型估计结果如表
-\@ref(tab:tab-excel-lme-m) 所示。由表 \@ref(tab:tab-excel-lme-m) 可以看出，在10%
+\@ref(tab:tab-excel-m-huizong) 所示。由表 \@ref(tab:tab-excel-m-huizong) 可以看出，在10%
 的显著性水平下，房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、平均相对
 湿度、平均风速、是否供暖、纬度通过显著性检验，且其系数分别为-0.0001、-0.9775、
 0.1624、0.0105、0.1129、1.483、2.9745、-0.2114。表明在其他变量保持不变的条件下，
@@ -650,11 +869,11 @@ knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"),
 library(mgcv)
 lme.m.excel <- gamm(excellent~con_area+gas_control+mean_temp+rain+humid+wind_speed +heating+coast+lat,
               random=list(city=~1), data=dat.sel.m.excel, method = "REML")
-
+AIC(lme.m.excel$lme);BIC(lme.m.excel$lme)
 lme.m.excel.coef <- summary(lme.m.excel$lme)$tTable[,-3]
 
 dimnames(lme.m.excel.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值"))
-
+write.csv(lme.m.excel.coef,"C:/Users/Administrator/Desktop/lme.m.excel.coef.csv")
 library("kableExtra")
 knitr::kable(lme.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="月度空气质量为优天数泊松混合效应模型回归固定效应表",digits = 4,
@@ -671,10 +890,10 @@ knitr::kable(lme.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 由之前变量筛选的结果可知，纬度与月均空气质量为优天数之间存在非线性相关关系。因此
 可以建立泊松可加模型。建立的泊松可加模型中参数部分结果显示在表
-\@ref(tab:tab-excel-gam-m) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gam-m)
+\@ref(tab:tab-excel-m-huizong) 中，非参数项的曲线显示在图 \@ref(fig:fig-excel-gam-m)
 中，非参数项显著性检验结果在表\@ref(tab:tab-excel-gam-m-smooth) 中。
 
-由表 \@ref(tab:tab-excel-gam-m) 可知，在10%的显著性水平下，房屋建筑施工面积、废
+由表 \@ref(tab:tab-excel-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、废
 气治理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖对月均空气质
 量为优天数存在显著影响，其系数分别为0.0000、-0.1845、0.037、0.0005、0.031、
 0.2714、0.3783。表明在其他变量保持不变的条件下，平均气温越高、降水量越大、平均相
@@ -691,9 +910,9 @@ gam.m.excel <- gam(excellent~con_area+gas_control
                    data=dat.sel.m.excel,
                    family = "poisson", method = "REML")
 gam.m.excel.coef <- summary(gam.m.excel)$p.table
-
+AIC(gam.m.excel);BIC(gam.m.excel)
 dimnames(gam.m.excel.coef) <- list(c("截距项", varselname[-c(9)]), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(gam.m.excel.coef,"C:/Users/Administrator/Desktop/gam.m.excel.coef.csv")
 library("kableExtra")
 knitr::kable(gam.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="月度空气质量为优天数泊松半参数回归模型参数估计结果",digits = 4,
@@ -749,11 +968,9 @@ knitr::kable(gam.smooth.tab.m.excel, row.names =T, align = c("c", "c", "c", "c")
 ## 月度空气质量为优天数泊松可加混合效应模型
 
 以城市作为随机效应，进一步建立泊松可加混合效应模型。估计的模型中参数部分结果显示
-在表 \@ref(tab:tab-excel-gamm-m) 中，非参数项的曲线显示在图
+在表 \@ref(tab:tab-excel-m-huizong) 中，非参数项的曲线显示在图
 \@ref(fig:fig-excel-gamm-m) 中，非参数项显著性检验结果在表
 \@ref(tab:tab-excel-gamm-m-smooth) 中。
-
-
 
 ```{r tab-excel-gamm-m-model, eval=T, results='hide'}
 
@@ -768,9 +985,9 @@ gamm.m.excel <- gamm(excellent~con_area+gas_control
 
 ```{r tab-excel-gamm-m, eval=T, results='markup'}
 gamm.m.excel.coef <- summary(gamm.m.excel$lme)$tTable[-(10),-3]
-
+AIC(gamm.m.excel$lme);BIC(gamm.m.excel$lme)
 dimnames(gamm.m.excel.coef) <- list(c("截距项", varselname[-c(9)]), c("估计值", "标准误", "t值", "P值"))
-
+#write.csv(gamm.m.excel.coef,"C:/Users/Administrator/Desktop/gamm.m.excel.coef.csv")
 library("kableExtra")
 knitr::kable(gamm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
              caption="月度空气质量为优天数泊松可加混合效应模型回归固定效应表",digits = 4,
@@ -783,7 +1000,7 @@ knitr::kable(gamm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-由表 \@ref(tab:tab-excel-gamm-m) 可知，在10%的显著性水平下，房屋建筑施工面积、
+由表 \@ref(tab:tab-excel-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、
 废气治理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖均通过显著性
 检验，且其系数分别为0.0000、-0.2094、0.0391、0.0005、0.0374、0.3613、0.4102。表明
 在其他条件不变的前提下，平均气温越高、降水量越多、平均相对湿度越大、平均风速越大、
@@ -830,6 +1047,21 @@ knitr::kable(gamm.smooth.tab.m.excel, row.names =T, align = c("c", "c", "c", "c"
 降，纬度在35之后，月均空气质量为优天数随纬度的增加而增加。
 
 ## 月度空气质量为优天数模型比较与最优模型选择
+
+```{r tab-excel-m-huizong, eval=T, results='markup'}
+yearly=read.csv("./results/monthly-excel.csv")
+
+library("kableExtra")
+knitr::kable(yearly, row.names =T, align = c("r", "r", "r", "r"),
+             caption="月度空气质量为优天数模型汇总表",digits = 4,
+             longtable = TRUE, booktabs = TRUE, escape = F) %>%
+    kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
+                  ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
+                  repeat_header_text = "(续)")%>%
+    kable_styling(full_width = T) %>%
+    column_spec(1, width = c("2cm"))
+
+```
 
 上述分析中，我们选取月均空气质量为优天数作为因变量，基于Lasso筛选出的变量为自变
 量，分别建立泊松回归模型、泊松混合效应模型、泊松可加模型和泊松可加混合效应模型对
