--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -3,11 +3,13 @@ title: "基于广义可加混合模型空气质量为优天数影响因素研究
 author: "Jin"
 date: '2019-04-15'
 output:
-  bookdown::word_document2:
-    fig_caption: true
-    reference_docx: ../style/word-styles-02.docx
+  bookdown::pdf_document2:
+    keep_tex: yes
+    toc: false
+    latex_engine: xelatex
     md_extensions: +east_asian_line_breaks
-    pandoc_args: ["--filter", "pandoc-crossref"]
+    citation_package: natbib
+    pandoc_args: ["--listing", "--bibliography=Bibfile", "--filter", "pandoc-crossref"]
   bookdown::html_document2:
     number_sections: true
     seq_numbering: true
@@ -18,12 +20,11 @@ output:
     keep_md: true
     toc: false
     pandoc_args: ["--filter", "pandoc-crossref", "-M", "eqnPrefix="]
-  bookdown::pdf_document2:
-    keep_tex: yes
-    toc: false
-    latex_engine: xelatex
+  bookdown::word_document2:
+    fig_caption: true
+    reference_docx: ../style/word-styles-02.docx
     md_extensions: +east_asian_line_breaks
-    pandoc_args: ["--listing", "--filter", "pandoc-crossref"]
+    pandoc_args: ["--filter", "pandoc-crossref"]
 css: ../style/markdown.css
 bibliography: ../Bibfile.bib
 eqnPrefixTemplate: ($$i$$)
